--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host=0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@tensorflow-models/coco-ssd": "^2.0.0",
     "@tensorflow-models/posenet": "^2.1.3",
     "@tensorflow/tfjs": "^1.2.8",
+    "@types/vega": "^3.2.0",
     "hammerjs": "^2.0.8",
     "ngx-webcam": "^0.2.6",
     "rxjs": "~6.4.0",
